<resources>
    <string name="app_name">Store Note</string>

    <string name="action_status">Status</string>
    <string name="id_number">00000</string>
    <string name="store_name">Store Name</string>
    <string name="cost">RD$</string>
    <string name="category_label">Category Name</string>
    <string name="send_data">Enviar</string>
    <string name="cerveza">Null</string>
    <string name="delete">Delete</string>
    <string name="create_title">Create Services</string>
    <string name="money">bg_monery</string>
    <string name="drinkers">drinkers</string>
    <string name="create_room_title">Create Room</string>
    <string name="store_room_name">Customer Name</string>
    <string name="room_number">Room Number</string>
    <string name="room_status">status</string>
    <string name="ubication">Ubication -</string>
    <string name="cutomer_name">Customer Name</string>
    <string name="room_name">Room - </string>
    <string name="id_number_row">000 - </string>
    <string name="create_category">New services</string>
    <string name="create_room">New room</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="not_found">Not record found with</string>
    <string name="status_services">Status Services</string>
    <string name="no_available">Not available</string>
    <string name="create_user">New user</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="start">Start</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="full_name">Jose Garcia Vargas</string>
    <string name="profile">Adminstrator</string>
    <string name="navigation">TODO</string>
    <string name="waiter_name">Waiter Name</string>
    <string name="bg_board">TODO</string>
    <string name="msg_add">Add the selected service to the corresponding room.</string>
    <string name="tittle_add">Item:</string>
    <string name="item_selected">Item Selected</string>
    <string name="cost_selected">00.0</string>
    <string name="pay_now">Collect Now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_services">Delete</string>
    <string name="time">00:00</string>
    <string name="icon">icon_time</string>
    <string name="category_detail_services">Category</string>
    <string name="describes">Describe...</string>
    <string name="cancel">Cancel</string>
    <string name="header_text_delete">Explain the reasons why you want to delete this service.</string>
    <string name="time_zero">00:00:00</string>
    <string name="waiter">waiter</string>
    <string name="users_nav">Users</string>
    <string name="board_nav">Board</string>
    <string name="services_nav">Services</string>
    <string name="rooms_nav">Rooms</string>
    <string name="setting_nav">Setting</string>
    <string name="log_out_nav">Log out</string>
    <string name="communicate">Communicate</string>
    <string name="cent">00.0</string>
    <string name="save">Save</string>
</resources>
