<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="lb.yiimgo.drinknote.ViewPager.CategoryActivity">
    <item android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_category"
        android:orderInCategory="10"
        android:title="@string/create_category"
        app:showAsAction="never"/>
</menu>