<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_service"
            android:layout_width="88dp"
            android:layout_height="104dp"
            android:contentDescription="@string/cerveza"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <LinearLayout

            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t_id"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_number" />

            <TextView
                android:id="@+id/t_name"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name" />


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mony_type"
                    style="@style/body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost" />

                <TextView
                    android:id="@+id/t_amount"
                    style="@style/body_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost" />
            </LinearLayout>

            <TextView
                android:id="@+id/t_category"
                style="@style/body_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_label" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgRowsRed"
                android:contentDescription="@string/status_services"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/no_available"
                android:textColor="@color/colorTextPrimary"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
