<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:orientation="horizontal">

         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tittle_add"
             android:textSize="14sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/item_selected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/item_selected"
             android:textColor="@color/bgRowsGreen" />

         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/cost"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/itemCost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/cost_selected"
             android:textColor="@color/bgRowsGreen" />

     </LinearLayout>

     <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_add" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="lb.yiimgo.storenote.Fragment.DialogFragment.AddServiceRoomFragment">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/display_room_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</LinearLayout>
