<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:layout_margin="15dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <ImageView
        android:id="@+id/typeDrink"
        android:layout_width="88dp"
        android:layout_height="104dp"
        android:contentDescription="@string/cerveza"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="@string/store_name"
            android:inputType="" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mony_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cost" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cent"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/bgRowsRed"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/cancel"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#FF2955F1"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/btnStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/save"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
