<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/t_header"
            style="@style/body_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/header_text_delete" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/describes"
                android:inputType="textMultiLine"
                android:padding="7dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/bgRowsRed"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/cancel"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#FF2955F1"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/btnStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/delete_services"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>